--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 coverage.*
 *.coverprofile
 profile.cov
+local*
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
@@ -30,3 +31,5 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
+/.qodo/
+/cmd/VERSION
